--- a/app/globals.css
+++ b/app/globals.css
@@ -39,24 +39,28 @@ body {
 
 @keyframes ground{
   from {background-position: 1000px 50px;}
-  to {background-position: -300px 50px;}
+  to {background-position: 0px 50px;}
 }
 
 .dino-ground{
-width: calc(100%-200px);  
+  position: absolute;
+width: 100%;
 height: 20px;
   overflow: hidden;
-  background: url(/img/dinosaur.jpeg) -200px 50px;
+  background: url(/img/dinosaur.jpeg) 100px 50px;
   animation: ground 4s steps(20) infinite;
+  z-index: 0;
 }
 
 .dinosaur-image{
+  position: absolute;
   width: 47px;
   height: 50px;
   background: url(/img/dinosaur.jpeg) -845px 0px;
   background-repeat: no-repeat;
   animation: dino 1s steps(6) infinite;
   overflow: hidden;
+  z-index: 10;
 }
 
 .dinosaur-image-2{
@@ -67,4 +71,17 @@ height: 20px;
 .dinosaur-image-3{
   width: 45px;
   background: url(/img/dinosaur.jpeg) -935px 0px;
+}
+
+@keyframes jump {
+  0%, 100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-80px);
+  }
+}
+
+.jump {
+  animation: jump 1s ease-in-out infinite;
 }
